Bug 102208 - Weston Framebuffer fails to start since 2.99.92
Summary: Weston Framebuffer fails to start since 2.99.92
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-14 13:51 UTC by n3rdopolis
Modified: 2017-08-16 11:05 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description n3rdopolis 2017-08-14 13:51:36 UTC
Hi

It happened sometime between 2.99.91 and 2.99.92
Starting Weston on framebuffer results in the error
weston: libweston/compositor.c:4733: weston_compositor_add_pending_output: Assertation 'output->disable' failed

Thanks
Comment 1 Pekka Paalanen 2017-08-15 07:45:48 UTC
Suggested fix: https://patchwork.freedesktop.org/patch/171808/
Comment 2 n3rdopolis 2017-08-15 12:08:02 UTC
Thanks! That fixes it for me too.
Comment 3 Pekka Paalanen 2017-08-15 12:13:55 UTC
What's your exact Tested-by tag I can use in the commit, please?
Comment 4 n3rdopolis 2017-08-15 22:04:34 UTC
...Would that be my email address?
Comment 5 Pekka Paalanen 2017-08-16 07:54:55 UTC
Yes, but with your real name. But I suppose it's not important for Tested-by, but it would be important for Signed-off-by if you contributed code. So I just took your bugzilla identity, I hope that's fine.

Fix pushed:
   167bbb6d..acd71fb0  master -> master
Comment 6 n3rdopolis 2017-08-16 11:05:51 UTC
That's fine


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.